--- a/project/Makefile
+++ b/project/Makefile
@@ -1,52 +1,118 @@
-SHELL=cmd.exe
-FRONT_END_BINARY=frontApp.exe
+#SHELL=cmd.exe
+#FRONT_END_BINARY=frontApp.exe
+#BROKER_BINARY=brokerApp
+#AUTH_BINARY=authApp
+#
+### up: starts all containers in the background without forcing build
+#up:
+#	@echo Starting Docker images...
+#	docker-compose up -d
+#	@echo Docker images started!
+#
+### up_build: stops docker-compose (if running), builds all projects and starts docker compose
+#up_build: build_broker build_auth
+#	@echo Stopping docker images (if running...)
+#	docker-compose down
+#	@echo Building (when required) and starting docker images...
+#	docker-compose up --build -d
+#	@echo Docker images built and started!
+#
+### down: stop docker compose
+#down:
+#	@echo Stopping docker compose...
+#	docker-compose down
+#	@echo Done!
+#
+### build_broker: builds the broker binary as a linux executable
+#build_broker:
+#	@echo Building broker binary...
+#	chdir ..\broker-service && set GOOS=linux&& set GOARCH=amd64&& set CGO_ENABLED=0 && go build -o $(BROKER_BINARY) ./cmd/api
+#	@echo Done!
+#
+### build_auth: builds the auth binary as a linux executable
+#build_auth:
+#	@echo Building auth binary...
+#	chdir ..\authentication-service && set GOOS=linux&& set GOARCH=amd64&& set CGO_ENABLED=0 && go build -o $(AUTH_BINARY) ./cmd/api
+#	@echo Done!
+#
+### build_front: builds the front end binary
+#build_front:
+#	@echo Building front end binary...
+#	chdir ..\front-end && set CGO_ENABLED=0&& set GOOS=windows&& go build -o frontApp.exe
+#	@echo Done!
+#
+#start: build_front
+#	@echo Starting front end
+#	chdir ..\front-end && start /B frontApp.exe
+#
+### stop: stop the front end
+#stop:
+#	@echo Stopping front end...
+#	@taskkill /IM "$(FRONT_END_BINARY)" /F
+#	@echo Stopped front end!
+
+
+
+#### MAC ####
+
+# Use a Unix shell instead of Windows cmd
+SHELL := /bin/bash
+
+FRONT_END_BINARY=frontApp
 BROKER_BINARY=brokerApp
 AUTH_BINARY=authApp
 
 ## up: starts all containers in the background without forcing build
 up:
-	@echo Starting Docker images...
-	docker-compose up -d
-	@echo Docker images started!
+	@echo "Starting Docker images..."
+	docker compose up -d
+	@echo "Docker images started!"
 
-## up_build: stops docker-compose (if running), builds all projects and starts docker compose
+## up_build: stops docker compose (if running), builds all projects and starts docker compose
 up_build: build_broker build_auth
-	@echo Stopping docker images (if running...)
-	docker-compose down
-	@echo Building (when required) and starting docker images...
-	docker-compose up --build -d
-	@echo Docker images built and started!
+	@echo "Stopping Docker images (if running)..."
+	docker compose down
+	@echo "Building (when required) and starting Docker images..."
+	docker compose up --build -d
+	@echo "Docker images built and started!"
 
 ## down: stop docker compose
 down:
-	@echo Stopping docker compose...
-	docker-compose down
-	@echo Done!
+	@echo "Stopping Docker compose..."
+	docker compose down
+	@echo "Done!"
 
 ## build_broker: builds the broker binary as a linux executable
 build_broker:
-	@echo Building broker binary...
-	chdir ..\broker-service && set GOOS=linux&& set GOARCH=amd64&& set CGO_ENABLED=0 && go build -o $(BROKER_BINARY) ./cmd/api
-	@echo Done!
+	@echo "Building broker binary..."
+	cd ../broker-service && \
+	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
+	go build -o $(BROKER_BINARY) ./cmd/api
+	@echo "Done!"
 
 ## build_auth: builds the auth binary as a linux executable
 build_auth:
-	@echo Building auth binary...
-	chdir ..\authentication-service && set GOOS=linux&& set GOARCH=amd64&& set CGO_ENABLED=0 && go build -o $(AUTH_BINARY) ./cmd/api
-	@echo Done!
+	@echo "Building auth binary..."
+	cd ../authentication-service && \
+	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
+	go build -o $(AUTH_BINARY) ./cmd/api
+	@echo "Done!"
 
-## build_front: builds the front end binary
+## build_front: builds the front end binary for macOS
 build_front:
-	@echo Building front end binary...
-	chdir ..\front-end && set CGO_ENABLED=0&& set GOOS=windows&& go build -o frontApp.exe
-	@echo Done!
+	@echo "Building front end binary..."
+	cd ../front-end && \
+	CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 \
+	go build -o $(FRONT_END_BINARY)
+	@echo "Done!"
 
+## start: build and start the front end
 start: build_front
-	@echo Starting front end
-	chdir ..\front-end && start /B frontApp.exe
+	@echo "Starting front end..."
+	cd ../front-end && ./$(FRONT_END_BINARY) &
 
 ## stop: stop the front end
 stop:
-	@echo Stopping front end...
-	@taskkill /IM "$(FRONT_END_BINARY)" /F
-	@echo Stopped front end!
+	@echo "Stopping front end..."
+	@pkill -f "$(FRONT_END_BINARY)" || true
+	@echo "Stopped front end!"
