--- a/project/Makefile
+++ b/project/Makefile
@@ -61,6 +61,7 @@ SHELL := /bin/bash
 FRONT_END_BINARY=frontApp
 BROKER_BINARY=brokerApp
 AUTH_BINARY=authApp
+LOGGER_BINARY=loggerServiceApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -69,7 +70,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker compose (if running), builds all projects and starts docker compose
-up_build: build_broker build_auth
+up_build: build_broker build_auth build_logger
 	@echo "Stopping Docker images (if running)..."
 	docker compose down
 	@echo "Building (when required) and starting Docker images..."
@@ -88,6 +89,14 @@ build_broker:
 	cd ../broker-service && \
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
 	go build -o $(BROKER_BINARY) ./cmd/api
+	@echo "Done!"
+
+## build_logger: builds the logger binary as a linux executable
+build_logger:
+	@echo "Building logger binary..."
+	cd ../logger-service && \
+	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
+	go build -o $(LOGGER_BINARY) ./cmd/api
 	@echo "Done!"
 
 ## build_auth: builds the auth binary as a linux executable
