--- a/project/Makefile
+++ b/project/Makefile
@@ -62,6 +62,7 @@ FRONT_END_BINARY=frontApp
 BROKER_BINARY=brokerApp
 AUTH_BINARY=authApp
 LOGGER_BINARY=loggerServiceApp
+MAILER_BINARY=mailerApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -70,7 +71,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker compose (if running), builds all projects and starts docker compose
-up_build: build_broker build_auth build_logger
+up_build: build_broker build_auth build_logger build_mail
 	@echo "Stopping Docker images (if running)..."
 	docker compose down
 	@echo "Building (when required) and starting Docker images..."
@@ -89,6 +90,13 @@ build_broker:
 	cd ../broker-service && \
 	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
 	go build -o $(BROKER_BINARY) ./cmd/api
+	@echo "Done!"
+
+build_mail:
+	@echo "Building mail binary..."
+	cd ../mail-service && \
+	GOOS=linux GOARCH=amd64 CGO_ENABLED=0 \
+	go build -o $(MAILER_BINARY) ./cmd/api
 	@echo "Done!"
 
 ## build_logger: builds the logger binary as a linux executable
