refactor: harden service config, event consumers, and API validation across microservices

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,12 @@ build/
 *.exe
 *.out
 *.app
+authApp
+brokerApp
+frontApp
+listenerApp
+loggerServiceApp
+mailerApp
 
 ############################
 # Test / coverage
