--- a/project/k8s/listener.yml
+++ b/project/k8s/listener.yml
@@ -24,6 +24,11 @@ spec:
             limits:
               memory: "512Mi"
               cpu: "500m"
+          env:
+            - name: LOGGER_SERVICE_URL
+              value: "http://logger-service/log"
+            - name: RABBITMQ_URL
+              value: "amqp://guest:guest@rabbitmq"
           ports:
             - containerPort: 80
 
